refactor to lovesun.xyz

--- a/index.html
+++ b/index.html
@@ -6,66 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="sunhuachuang huachuang20 homepage blog programmer programming python php ruby rails symfony flask emacs 孙华闯 个人博客 技术文章 思想感悟">
     <meta name="author" content="sunhuachuang">
-    <link rel="icon" href="/images/favicon.ico">
     <title>Sunhuachuang Blog</title>
-    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <script>
+     window.location.href = 'lovesun.xyz';
+    </script>
   </head>
   <body>
-    <div class="container">
-      <div>
-        <h2 class="text-success">Happy Hacking Sun. Happy Everyone !</h2>
-      </div>
-      <hr>
-      <div class="row">
-        <div class="col-sm-8">
-          <h4><a href="/python/flask-dir.html">flask项目的结构浅议</a><small style="float:right;"><em>2016</em></small></h4>
-          <h4><a href="/js/redux-example-analysis.html">对redux的几个案例的简单分析</a><small style="float:right;"><em>2016</em></small></h4>
-          <h4><a href="/php/module-already-load.html">PHP Warning: Module 'xxx' already loaded in Unknown on line 0</a><small style="float:right;"><em>2016</em></small></h4>
-          <h4><a href="/php/listener-before-or-after-operational-database-mysql.html">在操作数据库前监听doctrine事件</a><small style="float:right;"><em>2016</em></small></h4>
-          <h4><a href="/php/restful-api-login-register-fosuerbundle-symfony3-guard.html">restful api for fosuserbundle in symfony3. (by guard)</a><small style="float:right;"><em>2016</em></small></h4>
-          <nav>
-            <ul class="pager">
-              <li style="float:left;padding-left:2em;"><a href="#">Previous</a></li>
-              <li style="float:right;padding-right:2em;"><a href="#">Next</a></li>
-            </ul>
-          </nav>
-        </div>
-
-        <div class="col-sm-3 col-sm-offset-1">
-          <div>
-            <h4>About Me</h4>
-            <p>Name: <em>sunhuachuang (孙华闯)</em></p>
-            <p><a href="about_en.html">English Introduction</a> <a href="about_zh.html">中文简介</a></p>
-            <p><a href="https://github.com/sunhuachuang/sunhuachuang.github.io/issues">交流讨论请至 issue</a></p>
-          </div>
-          <hr>
-          <div>
-            <h4>Archives</h4>
-            <ol class="list-unstyled">
-              <li><a href="2018.html">2018 (0)</a></li>
-              <li><a href="2017.html">2017 (0)</a></li>
-              <li><a href="2016.html">2016 (5)</a></li>
-            </ol>
-            <ol class="list-unstyled">
-              <li><a href="python/index.html">python (1)</a></li>
-              <li><a href="php/index.html">php (3)</a></li>
-              <li><a href="js/index.html">js (1)</a></li>
-            </ol>
-          </div>
-          <hr>
-          <div>
-            <h4>Elsewhere</h4>
-            <ol class="list-unstyled">
-              <li><p class="text-success">E: huachuang20@gmail.com</p></li>
-              <li><a href="https://github.com/sunhuachuang">GitHub</a></li>
-              <li><a href="http://weibo.com/u/3268988844?is_all=1">WeiBo</a></li>
-              <li><a href="https://www.linkedin.com/in/huachuang-sun-6548a3105">Linkedin</a></li>
-              <li><a href="https://twitter.com/huachuang20">Twitter</a></li>
-            </ol>
-          </div>
-        </div>
-      </div>
-      <hr>
-    </div>
+    <h1><a href="lovesun.xyz">GOTO my new blog lovesun.xyz</a></h1>
   </body>
 </html>
