goto lovesun.xyz

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="sunhuachuang">
     <title>Sunhuachuang Blog</title>
     <script>
-     window.location.href = 'lovesun.xyz';
+     window.location.href = 'http://lovesun.xyz';
     </script>
   </head>
   <body>
