--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html>
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="sunhuachuang huachuang20 homepage blog programmer programming python php ruby rails symfony flask emacs 孙华闯 个人博客 技术文章 思想感悟">
-    <meta name="author" content="sunhuachuang">
-    <title>Sunhuachuang Blog</title>
-    <script>
-     window.location.href = 'http://lovesun.xyz';
-    </script>
+    <title>Hello Sun!</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.5.3/css/bulma.min.css">
   </head>
   <body>
-    <h1><a href="lovesun.xyz">GOTO my new blog lovesun.xyz</a></h1>
+    <section class="section">
+      <div class="container">
+        <h1 class="title">
+          Hello World
+        </h1>
+        <p class="subtitle">
+          Here is  <strong>Sun</strong>!
+        </p>
+      </div>
+    </section>
   </body>
 </html>
